--- a/09-media-query/css/style.css
+++ b/09-media-query/css/style.css
@@ -44,3 +44,177 @@ h1 {
     background-color: yellowgreen;
   }
 }
+
+.media-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  width: 700px;
+  background-color: black;
+}
+
+.media-menu a {
+  text-decoration: none;
+  color: black;
+}
+
+.media-menu li {
+  background-color: yellow;
+  width: 150px;
+  border: solid 5px blue;
+  padding: 5px 15px;
+  text-align: center;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .media-menu {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 190px;
+  }
+
+  .media-menu li {
+    margin-bottom: 10px;
+  }
+
+  .media-menu li:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+/* PC */
+.intro {
+  display: flex;
+  position: fixed;
+
+  width: 100%;
+  height: 80px;
+  background: #fff;
+}
+
+.intro h1 {
+  width: 50%;
+  height: 80px;
+  background: black;
+}
+
+.intro nav {
+  width: 50%;
+  height: 80px;
+  background: yellow;
+}
+
+.intro nav ul {
+  display: flex;
+
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.intro nav li {
+  width: 33.3333%;
+  height: 80px;
+}
+
+.intro nav li:nth-child(1) {
+  background: yellowgreen;
+}
+
+.intro nav li:nth-child(2) {
+  background: greenyellow;
+}
+
+.intro nav li:nth-child(3) {
+  background: green;
+}
+
+main {
+  width: 100%;
+  height: 2000px;
+  background-color: khaki;
+  padding-top: 80px;
+}
+
+main p {
+  margin: 0;
+}
+
+/* Mobile */
+@media (min-width: 320px) and (max-width: 767px) {
+  .intro {
+    position: static;
+    flex-direction: column;
+    height: 160px;
+  }
+
+  .intro h1 {
+    width: 100%;
+  }
+
+  .intro nav {
+    width: 100%;
+  }
+
+  main {
+    padding-top: 0;
+  }
+
+  main p {
+    margin: 0;
+  }
+}
+
+/* StartBootStrap design work */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.column {
+  width: 355px;
+  background: #fff;
+  border: solid 2px red;
+  margin-bottom: 10px;
+}
+
+.column img {
+  width: 100%;
+  vertical-align: middle;
+}
+
+.column .image-info {
+  text-align: center;
+}
+
+.column .image-info h2,
+.column .image-info h4 {
+  margin: 0;
+}
+
+@media (min-width: 540px) and (max-width: 720px) {
+  .container {
+    width: 720px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 539px) {
+  .container {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 10px;
+  }
+
+  .column {
+    width: 100%;
+  }
+}
