--- a/10-kidsgao/css/mobile.css
+++ b/10-kidsgao/css/mobile.css
@@ -164,4 +164,229 @@
 
     width: 152px;
   }
+
+  /* forest */
+  #forest1 {
+    position: relative;
+
+    height: 400px;
+    background-image: url(../img/mobile/forest/forest1/mobile_forest1_bg.png);
+  }
+
+  #forest1 .tree-left {
+    width: 79px;
+    height: 187px;
+    background-image: url(../img/mobile/forest/forest1/mobile_lefttree.png);
+  }
+
+  #forest1 .tree-wrap {
+    top: 200px;
+
+    width: 68px;
+    height: 129px;
+  }
+
+  #forest1 .tree-wrap .tree-rabbit1,
+  #forest1 .tree-wrap .tree-rabbit2 {
+    display: none;
+  }
+
+  #forest1 .tree-wrap .tree-right {
+    width: 68px;
+    height: 129px;
+    background-image: url(../img/mobile/forest/forest1/mobile_righttree.png);
+  }
+
+  /* forest2 */
+  #forest2 {
+    position: relative;
+
+    height: 400px;
+    background-image: url(../img/mobile/forest/forest2/mobile_forest2_bg.png);
+  }
+
+  #forest2 .frog {
+    margin: 0 0 0 20px;
+
+    width: 34px;
+    height: 57px;
+    background-image: url(../img/mobile/forest/forest2/mobile_frog.png);
+  }
+
+  #forest2 .machine-wrap2 {
+    top: 70px;
+    margin-left: -97px;
+
+    width: 200px;
+    height: 110px;
+  }
+
+  #forest2 .machine-wrap2 .machine-bottom {
+    left: 50%;
+    margin: 50px 0 0 -70.5px;
+
+    width: 141px;
+    height: 60px;
+    background-image: url(../img/mobile/forest/forest2/mobile_machinebottom.png);
+  }
+
+  #forest2 .machine-wrap2 .machine-left {
+    margin: 0 0 0 40px;
+
+    width: 46px;
+    height: 85px;
+    background-image: url(../img/mobile/forest/forest2/mobile_machineleft.png);
+  }
+
+  #forest2 .machine-wrap2 .machine-right {
+    margin: -10px 0 0 120px;
+
+    width: 46px;
+    height: 93px;
+    background-image: url(../img/mobile/forest/forest2/mobile_machineright.png);
+  }
+
+  #forest2 .forest2-bubble {
+    position: absolute;
+    top: 290px;
+    left: 50%;
+    margin-left: -83px;
+
+    width: 161px;
+  }
+
+  #forest2 .forest2-tree {
+    float: right;
+    top: 130px;
+    margin-right: 20px;
+
+    width: 69px;
+    height: 76px;
+    background-image: url(../img/mobile/forest/forest2/mobile_forest2tree.png);
+  }
+
+  /* forest3 */
+  #forest3 {
+    height: 630px;
+    background-image: url(../img/mobile/forest/forest3/mobile_forest3_bg.png);
+  }
+
+  #forest3 .forest3-wrap {
+    top: 300px;
+
+    width: 99px;
+    height: 127px;
+  }
+
+  #forest3 .forest3-wrap .forest3-tree {
+    width: 99px;
+    height: 127px;
+    background-image: url(../img/mobile/forest/forest3/mobile_forest3tree.png);
+  }
+
+  #forest3 .forest3-wrap .big-bird,
+  #forest3 .forest3-wrap .small-bird {
+    display: none;
+  }
+
+  /* science */
+
+  #science {
+    height: 580px;
+    background-image: url(../img/mobile/science/mobile_science_bg.png);
+  }
+
+  #science .science-wrap {
+    overflow: hidden;
+    top: 180px;
+
+    width: 360px;
+    height: auto;
+  }
+
+  #science .science-wrap .left-wrap {
+    width: 100px;
+  }
+
+  #science .science-wrap .left-wrap .left-gly {
+    margin: 0 0 10px 0;
+    width: 76px;
+    height: 63px;
+    background-image: url(../img/mobile/science/mobile_gly.png);
+  }
+
+  #science .science-wrap .left-wrap img,
+  #science .science-wrap .right-wrap img {
+    height: 15px;
+  }
+
+  #science .science-wrap .left-wrap p,
+  #science .science-wrap .right-wrap p {
+    display: none;
+  }
+
+  #science .science-wrap .center-wrap {
+    width: 160px;
+    height: 222px;
+  }
+
+  #science .science-wrap .center-wrap .purple-steam {
+    margin-left: -40px;
+    width: 80px;
+    height: 71px;
+    background-image: url(../img/mobile/science/mobile_grape.png);
+  }
+
+  #science .science-wrap .center-wrap .funnel-back {
+    width: 173px;
+    height: 151px;
+    background-image: url(../img/mobile/science/mobile_hopperback.png);
+  }
+
+  #science .science-wrap .center-wrap .funnel-front {
+    margin-top: 20px;
+    width: 160px;
+    height: 122px;
+    background-image: url(../img/mobile/science/mobile_hopperfront.png);
+  }
+
+  #science .science-wrap .right-wrap {
+    width: 100px;
+  }
+
+  #science .science-wrap .right-wrap .right-water {
+    margin: 0 0 10px 32px;
+    width: 67px;
+    height: 63px;
+    background-image: url(../img/mobile/science/mobile_water.png);
+  }
+
+  /* night1 */
+  #night1 {
+    position: relative;
+    height: 500px;
+    background-image: url(../img/mobile/oneday/night1/mobile_night1_bg.png);
+  }
+
+  #night1 .owl {
+    width: 88px;
+    height: 151px;
+    background-image: url(../img/mobile/oneday/night1/mobile_owl.png);
+  }
+
+  #night1 .star-wrap {
+    position: absolute;
+    top: 300px;
+    margin-left: 200px;
+
+    width: 308px;
+    height: 157px;
+    background-image: url(../img/mobile/oneday/night1/mobile_star.png);
+  }
+
+  #night1 .star-wrap .star1,
+  #night1 .star-wrap .star2,
+  #night1 .star-wrap .star3 {
+    display: none;
+  }
 }
