Helbak finished with footer

--- a/11-helbak/css/style.css
+++ b/11-helbak/css/style.css
@@ -34,6 +34,7 @@ span {
   display: block;
 }
 
+/* header, nav in Mobile */
 #header h1 .logo {
   position: relative;
   display: block;
@@ -86,7 +87,7 @@ span {
   transform: translateY(-50%);
 }
 
-/* PC */
+/* header, nav in PC */
 @media (min-width: 47em) {
   #header {
     position: fixed;
@@ -101,6 +102,7 @@ span {
 
   #header h1 {
     width: 50%;
+    background: #fff;
   }
 
   #header h1 .logo {
@@ -121,5 +123,153 @@ span {
 
   #header .buttons li {
     height: 80px;
+  }
+}
+
+/* main in Mobile */
+.items .item-group .item-link {
+  position: relative;
+  display: block;
+  /* overflow: hidden; */
+  width: 100%;
+  height: 56.25%;
+  border: solid 1px black;
+}
+
+.items .item-link img {
+  width: 100%;
+  height: 100%;
+}
+
+.items .item-link .item-name {
+  position: absolute;
+  left: 25px;
+  bottom: 25px;
+  font-size: 25px;
+  color: black;
+}
+
+@media (min-width: 47em) {
+  .items {
+    padding-top: 80px;
+  }
+}
+
+/* main in PC */
+@media (min-width: 60em) {
+  .items {
+    overflow: hidden;
+  }
+
+  .items .item-group .item-link {
+    float: left;
+    width: 50%;
+    height: 28.125%;
+  }
+}
+
+/* footer in mobile */
+#footer {
+  position: relative;
+  background: rgb(220, 220, 10);
+
+  padding-bottom: 66px;
+}
+
+.nav-left {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.nav-left li {
+  padding: 5px 0;
+}
+
+.nav-right {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.nav-right li {
+  display: inline-block;
+  padding: 7px 4px;
+}
+
+.payment-icon {
+  display: inline-block;
+  width: 30px;
+  height: 20px;
+}
+
+.one {
+  background: red;
+}
+
+.two {
+  background: orange;
+}
+
+.three {
+  background: green;
+}
+
+.four {
+  background: blue;
+}
+
+.five {
+  background: purple;
+}
+
+.to-top {
+  position: absolute;
+  display: block;
+  left: 50%;
+  margin-left: -33px;
+  background: #f4f4f4;
+  width: 66px;
+  height: 66px;
+}
+
+@media (min-width: 60em) {
+  .nav-left {
+    float: left;
+    width: 50%;
+    text-align: left;
+    padding: 32px 0 0 40px;
+  }
+
+  .nav-left a {
+    font-size: 15px;
+    padding: 0 5px;
+  }
+
+  .nav-right {
+    float: right;
+    width: 50%;
+    margin: 0;
+    padding: 32px 0 0 40px;
+    text-align: right;
+  }
+
+  .nav-right li {
+    padding: 0 4px;
+  }
+
+  .nav-right ul {
+    margin-right: 15px;
+  }
+
+  #footer h3 {
+    padding-right: 10px;
+    font-size: 15px;
+  }
+
+  #footer ul,
+  #footer li,
+  #footer h3 {
+    display: inline-block;
+    vertical-align: middle;
   }
 }
