--- a/13-naver-practice/css/shop.css
+++ b/13-naver-practice/css/shop.css
@@ -83,7 +83,6 @@ h6 {
 }
 
 /* main */
-
 .border {
   border: solid 1px #ced2d7;
 }
@@ -97,7 +96,8 @@ h6 {
 }
 
 .shop-container {
-  width: 1320px;
+  width: 1280px;
+  flex-wrap: wrap;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -106,7 +106,6 @@ h6 {
 .list-item {
   width: 308px;
   height: 496px;
-  background: yellowgreen;
   margin-bottom: 20px;
 }
 
@@ -248,6 +247,7 @@ h6 {
   display: inline-block;
   padding: 4px;
   border: solid 1px #fff;
+  color: #fff;
 }
 
 .list-half-header span {
@@ -349,4 +349,45 @@ h6 {
   font-weight: 700;
   font-style: normal;
   color: #62a7ee;
+}
+
+/* 4th item-list */
+.h-260 {
+  height: 260px;
+}
+
+.list-row-3 li {
+  display: flex;
+  border-top: solid 1px #e7e7e7;
+  padding: 13px 14px;
+}
+
+.list-row-info {
+  padding: 6px 0 6px 10px;
+}
+
+.list-row-info span {
+  font-size: 12px;
+}
+
+.list-row-info h3 {
+  font-size: 13px;
+}
+
+/* brand-wrap */
+.brand-wrap {
+  width: 100%;
+  height: 100px;
+  background: #fff;
+}
+
+.brand-wrap ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 18px;
+}
+
+.brand-wrap ul li {
+  width: 100%;
+  height: 100%;
 }
