--- a/13-naver-practice/css/shop.css
+++ b/13-naver-practice/css/shop.css
@@ -190,6 +190,7 @@ h6 {
 
 /* 2nd list-item */
 .list-item.banner img {
+  background-image: url('../img/shopping.jpeg');
   width: 100%;
   height: 100%;
   border: solid 1px #ced2d7;
@@ -390,4 +391,60 @@ h6 {
 .brand-wrap ul li {
   width: 100%;
   height: 100%;
+}
+
+/* width: 1280px;
+flex-wrap: wrap;
+margin: 0 auto;
+display: flex;
+justify-content: space-between; */
+
+/* footer */
+#footer {
+  width: 1280px;
+  margin: 0 auto;
+  margin-top: 20px;
+  border-top: 3px solid black;
+  text-align: center;
+}
+
+.some-space {
+  width: 100%;
+  height: 60px;
+  border-bottom: 1.5px solid black;
+  text-align: center;
+  line-height: 60px;
+  margin-bottom: 65px;
+}
+
+.policy-wrap {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.policy-wrap span {
+  font-weight: 400;
+}
+
+.policy-wrap span:before {
+  content: '';
+  display: inline-block;
+  width: 1px;
+  height: 11px;
+  margin: 0 8px;
+  background: #d7d7d7;
+  vertical-align: -1;
+}
+
+.policy-wrap span:first-child:before {
+  content: initial;
+}
+
+.policy-wrap span:nth-child(3) {
+  font-weight: 700;
+}
+
+#footer p {
+  color: rgb(110, 108, 108, 0.5);
 }
