--- a/13-naver-practice/css/ent.css
+++ b/13-naver-practice/css/ent.css
@@ -40,11 +40,10 @@ h6 {
   margin: 0 auto;
 }
 
-/* CONTENT */
-
 .ent-container {
   width: 980px;
   margin: 0 auto;
+  padding-top: 24px;
 }
 
 .ent-flex-start {
@@ -73,6 +72,8 @@ h6 {
   justify-content: space-between;
   align-items: center;
 }
+
+/* CONTENT */
 
 #ent-header {
   width: 100%;
@@ -726,9 +727,6 @@ h6 {
   color: #999;
 }
 
-#ent-main .ent-left #ent-section-8 .news-lists {
-}
-
 #ent-main .ent-left #ent-section-8 .news-lists li {
   padding: 18px 0;
   border-bottom: solid 1px #f1f1f1;
@@ -787,9 +785,6 @@ h6 {
 #ent-main .ent-left #ent-section-9 .title-wrap a {
   font-size: 12px;
   color: #999;
-}
-
-#ent-main .ent-left #ent-section-9 ul {
 }
 
 #ent-main .ent-left #ent-section-9 li {
