--- a/self-taught-practice/applecoding/practice-2/assignment.css
+++ b/self-taught-practice/applecoding/practice-2/assignment.css
@@ -14,7 +14,9 @@ h3 {
   margin-bottom: 10px;
 }
 
-div {
+div,
+input,
+textarea {
   box-sizing: border-box;
 }
 
@@ -44,7 +46,7 @@ div {
 }
 
 .mail-wrap input {
-  width: 404px;
+  width: 100%;
   padding: 6px;
 }
 
@@ -54,7 +56,7 @@ div {
 
 .name-left {
   float: left;
-  margin-right: 36px;
+  margin-right: 68px;
 }
 
 input[type='text'] {
@@ -70,7 +72,11 @@ input[type='text'] {
   margin-bottom: 30px;
 }
 
-.footer-wrap span {
+.message-wrap textarea {
+  width: 100%;
+}
+
+.footer-wrap label {
   /* position: relative; */
   margin-right: 193px;
 }
@@ -82,4 +88,5 @@ input[type='text'] {
   color: #fff;
   border: none;
   border-radius: 4px;
+  cursor: pointer;
 }
