--- a/self-taught-practice/applecoding/practice-4/style.css
+++ b/self-taught-practice/applecoding/practice-4/style.css
@@ -6,31 +6,37 @@
 header {
   width: 100%;
   height: 100px;
-  background: lightgreen;
 }
 
 .container {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
-.logo {
+.box {
+  flex-grow: 1;
+}
+
+.red {
   width: 100px;
   height: 100px;
   background: red;
 }
 
-.empty {
-  flex-grow: 1;
+.green {
+  width: 100px;
+  height: 100px;
+  background: lightgreen;
+  flex-grow: 5;
 }
 
-.menu-1 {
+.coral {
   width: 100px;
   height: 100px;
   background: coral;
 }
 
-.menu-2 {
+.blue {
   width: 100px;
   height: 100px;
   background: blue;
