--- a/self-taught-practice/applecoding/practice-4/style.css
+++ b/self-taught-practice/applecoding/practice-4/style.css
@@ -42,25 +42,76 @@ header {
   background: blue;
 }
 
+#main {
+  width: 95%;
+  margin: auto;
+  text-align: center;
+}
+
 .info-container {
-  width: 90%;
+  width: 100%;
   margin: auto;
   margin-top: 5rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .info-container div {
   float: left;
   width: 25%;
-  text-align: center;
+  background: #f6f6f6;
+  /* text-align: center; */
   padding: 60px 0;
-  /* border: 1px black solid; */
 }
 
 .info-container div p:first-child {
   margin-bottom: 20px;
   font-weight: 600;
 }
+
+/* product */
+.product {
+  width: 50%;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 150px;
+}
+
+.product-wrap {
+  position: relative;
+}
+
+.overlay-wrap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.overlay-real {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #f6f6f6ab;
+
+  top: 100%;
+  transition: all 0.5s;
+}
+
+.overlay-wrap:hover .overlay-real {
+  top: 60%;
+}
+
+.overlay-real p {
+  padding-top: 8%;
+  font-size: 60px;
+  color: #fff;
+}
+
+.product-wrap img {
+  width: 100%;
+}
+
+/* Media Query */
 
 @media screen and (max-width: 992px) {
   .info-container div {
